# minesweeper3d

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
glad/: glad.h
src/: application.cpp  application.hpp  camera.hpp  input.hpp  main.cpp  math.hpp  math2.hpp  matrix.hpp  profiling.hpp  program.cpp  program.hpp  settings.hpp  shader.cpp  shader.hpp
src/game/: board.cpp  board.hpp  crosshair.cpp  crosshair.hpp  resource_manager.cpp  resource_manager.hpp
src/math/: intersections.hpp  math.hpp  matrix.hpp  primitives.hpp  random.hpp
src/render/: camera.hpp  colors.hpp  mesh.hpp  program.cpp  program.hpp  shader.cpp  texture.cpp  texture.hpp
tests/: CMakeLists.txt  example_test.cpp  input_test.cpp
